--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
                 text-align: center;
                 color: green;
             }
+            
+            .text2
+            {
+                text-align: center;
+                color: pink;
+            }
 
         </style>
     </head>
     <body>
 
-        <h1 class="text">Welcome to my website!</h1>
+        <h1 class="text1">Welcome to my website!</h1>
 
         <p>
          <div class="text">
